[gd_scene load_steps=5 format=2]

[ext_resource path="res://Examples/RPG Inventory/Images/outline.png" type="Texture" id=1]
[ext_resource path="res://src/Grid/SquareGrid/square_grid_generator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Examples/RPG Inventory/ItemBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Examples/RPG Inventory/inventory.gd" type="Script" id=4]

[node name="Inventory" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.05261
margin_right = 1022.95
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0.027451, 0.176471, 0.203922, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 200, 300 )
texture = ExtResource( 1 )

[node name="SquareGridGenerator" parent="." instance=ExtResource( 2 )]
position = Vector2( 650, 300 )
columns = 6
rows = 6
cell_size = Vector2( 68, 68 )
cell_margin = Vector2( 8, 8 )
color = Color( 1, 1, 1, 1 )

[node name="LeftArm" parent="." instance=ExtResource( 3 )]
position = Vector2( 115, 330 )
type = 0

[node name="RightArm" parent="." instance=ExtResource( 3 )]
position = Vector2( 285, 330 )
type = 0

[node name="Head" parent="." instance=ExtResource( 3 )]
position = Vector2( 200, 65 )
type = 2

[node name="Chest" parent="." instance=ExtResource( 3 )]
position = Vector2( 200, 198.947 )
type = 1
